<resources>

    <!--// App name-->
    <string name="app_name">Blue Shipping</string>

    <!--// Custom Dialog-->
    <string name="custom_dialog_txtOk">OK</string>
    <string name="custom_dialog_txtDescription">TRACKING NUMBER NOT FOUND</string>

    <!--Splash Desc-->
    <string name="splash_desc">2017 Blue Shipping do Brasil. All rights reserved</string>

    <!--// New User Activity-->
    <string name="lbl_new_user_title">NEW USER</string>
    <string name="hint_new_user_name">NAME</string>
    <string name="hint_new_user_email">E-MAIL</string>
    <string name="hint_new_user_phone">PHONE</string>
    <string name="hint_new_user_username">USERNAME</string>
    <string name="btn_new_user_cancel">CANCEL</string>
    <string name="btn_new_user_register">REGISTER</string>

    <!--// Settings Activity-->
    <string name="lbl_settings_title">PROFILE</string>
    <string name="btn_setting_btnSave">SAVE</string>
    <string name="btn_setting_btnLogout">LOGOUT</string>

    <!--// Login Activity-->
    <string name="txt_email">username</string>
    <string name="txt_password">password</string>
    <string name="txt_login_title">Login</string>
    <string name="btn_login_signup">New user? Register now!</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_forgot_pass">Forgot password?</string>

    <string name="hint_email">email</string>
    <string name="hint_pass">password</string>

    <!--// Main Activity-->
    <string name="tabAboutUs">ABOUT US</string>
    <string name="tabTracking">TRACK NOW</string>
    <string name="tabContactUs">CONTACT US</string>
    <string name="activity_main_btnLogout">LOGOUT</string>

    <!--// Tracking Result Activity-->
    <string name="lbl_tracking_result_title">TRACKING</string>
    <string name="lbl_tracking_result_title_status">FOLLOW UP</string>
    <string name="lbl_tracking_result_BLAWB">B/L-AWB:</string>
    <string name="lbl_tracking_result_type">Vessel/Airline:</string>
    <string name="lbl_tracking_result_company">Company:</string>
    <string name="lbl_tracking_result_origin">Origin:</string>
    <string name="lbl_tracking_result_finalDestination">Final destination:</string>
    <string name="lbl_tracking_result_exporterOrImporter">Consignee:</string>
    <string name="lbl_tracking_result_pickupDate">Pickup Date:</string>

    <string name="lbl_tracking_result_BLAWB_response">blawb</string>
    <string name="lbl_tracking_result_type_response">type</string>
    <string name="lbl_tracking_result_company_response">company</string>
    <string name="lbl_tracking_result_origin_response">origin</string>
    <string name="lbl_tracking_result_finalDestination_response">finaldestination</string>
    <string name="lbl_tracking_result_exporterOrImporter_response">exporter</string>
    <string name="lbl_tracking_result_pickupDate_response">datainicio</string>

    <string name="header_tracking_result_name">Date</string>
    <string name="header_tracking_result_status">Status</string>
    <string name="header_tracking_result_docs">Docs</string>


    <!--// Tracking Fragment-->
    <string name="txt_tracking_fragment_code">Enter your tracking number bellow</string>
    <string name="btn_tracking">SEARCH</string>
    <string name="hint_code">R34900P343535</string>

    <!--// Contact US Fragment-->
    <string name="lbl_contact_fragment">CONTACT US</string>
    <string name="lbl_contact_fragment_number">+55 27 2142-0111</string>
    <string name="lbl_contact_fragment_email">suporte@blueshipping.com.br</string>
    <string name="lbl_contact_fragment_site">www.blueshipping.com.br</string>
    <string name="btn_contact_us_sendEmail">SEND E-MAIL</string>

    <!--// About Us Fragment-->
    <string name="lbl_about_us_fragment">ABOUT US</string>
    <string name="lbl_about_us_fragment_text">Carrying goods is transporting values ​​- those that
        create wealth and those that move the relationships around the world. And at Blue Shipping,
        the biggest value for us is the trust of our clients, achieved over these 15 years of operation.
        \n\nThe commitment of our team is to use their experience to ensure safety and security in all
        phases of the logistics operation. Connecting all the continents, we offer services of
        national and international ocean and air freight, besides Foreign Trade consulting.
        \n\nWith a specialized commercial and operational team, with over 20 years of experience in the
        industry, Blue Shipping connects the world through safe and reliable logistics operations.
        Our mission is to ensure the delivery and receiving of cargo, with competitive prices and
        excellence in service.\n\nMore than goods, we deliver tranquility.\n\nIn our freight tracking app,
        you and your company can easily track the movement of your product at every stage of the
        process. Come visit Blue Shipping\'s new facilities at Enseada do Suá, in Espírito Santo,
        or consult one of our 120 representatives all over the world.\n\nAs we complete 15 years in
        service, Blue Shipping renews its brand, but keeps its tradition of qualified and friendly
        service and its innovative spirit - in search of new seas to explore and new ways to navigate.
        \n\nBecause the most important thing is to deliver value to people, anywhere in the world,
        through a transparent and friendly relationship.</string>


</resources>
