<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_blueshipping_tela_rastreio_erro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="br.com.blueshipping.blueshipping.activity.SettingActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/activity_setting_btnBack"
            android:src="@drawable/ic_arrow_back_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"/>

        <ImageView
            android:src="@drawable/ic_logo_heade_blueshipping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_setting_titleProfile"
                android:text="@string/lbl_settings_title"
                android:textColor="@color/colorWhite"
                android:textSize="28sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                android:layout_gravity="center"/>


            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/activity_setting_edtName"
                    android:hint="@string/hint_new_user_name"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:layout_marginBottom="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:backgroundTint="@color/colorWhite60percent" />

                <EditText
                    android:id="@+id/activity_setting_edtEamil"
                    android:hint="@string/hint_new_user_email"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:layout_marginBottom="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/colorWhite60percent"/>

                <EditText
                    android:id="@+id/activity_setting_edtPhone"
                    android:hint="@string/hint_new_user_phone"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:layout_marginBottom="18dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:inputType="phone"
                    android:backgroundTint="@color/colorWhite60percent"/>

                <EditText
                    android:id="@+id/activity_setting_edtUsername"
                    android:hint="@string/hint_new_user_username"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:layout_marginBottom="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:inputType="text"
                    android:backgroundTint="@color/colorWhite60percent"/>


                <Button
                    android:id="@+id/activity_setting_btnSave"
                    android:text="@string/btn_setting_btnSave"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:layout_width="250dp"
                    android:layout_height="@dimen/standard_button_height"
                    android:textAllCaps="false"
                    android:background="@drawable/round_rect_btn_blue"
                    android:layout_marginBottom="20dp"/>


                <Button
                    android:id="@+id/activity_setting_btnLogout"
                    android:text="@string/btn_setting_btnLogout"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:layout_width="250dp"
                    android:layout_height="@dimen/standard_button_height"
                    android:textAllCaps="false"
                    android:background="@null"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>