<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_tracking_list"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow

        android:id="@+id/item_tracking_head_tableRow"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/header_tracking_txtTitleDate"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:text="@string/header_tracking_result_name"
            android:textSize="14sp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorLightBlue"/>


        <!--<View android:layout_width="2dp"-->
            <!--android:background="@color/colorWhite"-->
            <!--android:layout_height="match_parent"/>-->

        <TextView
            android:id="@+id/header_tracking_txtTitleStatus"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:text="@string/header_tracking_result_status"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorLightBlue"/>


        <!--<View android:layout_width="2dp"-->
            <!--android:background="@color/colorWhite"-->
            <!--android:layout_height="match_parent"/>-->

        <TextView
            android:id="@+id/header_tracking_txtTitleDocs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/header_tracking_result_docs"
            android:textSize="14sp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorLightBlue"/>

    </TableRow>


</TableLayout>